Чтение загруженного CSV файла

--- a/hardcontrol/templates/hardcontrol/list_operations.html
+++ b/hardcontrol/templates/hardcontrol/list_operations.html
@@ -32,7 +32,7 @@
                         Способ выбора
                     </th>
                     <th>
-                        Менджер
+                        Менеджер
                     </th>
                 </tr>
 
