--- a/hardcontrol/templates/base.html
+++ b/hardcontrol/templates/base.html
@@ -44,7 +44,11 @@
 
         <li class="nav-item {% if request.resolver_match.url_name == 'worker_detail' %} active {% endif %} {% if request.resolver_match.url_name == 'worker_list' %} active {% endif %}>">
             <a class="nav-link" href="{% url 'worker_list' %}">Сотрудники</a>
-          </li>
+        </li>
+
+        <li class="nav-item {% if request.resolver_match.url_name == 'inventory' %} active {% endif %}>">
+            <a class="nav-link" href="{% url 'inventory' %}">Инвентаризация</a>
+        </li>
 
 {#            <li class="nav-item">#}
 {#            <a class="nav-link" href="{% url 'register_user' %}">Добавление сотрудников</a>#}
