--- a/hardcontrol/templates/hardcontrol/inventory_print.html
+++ b/hardcontrol/templates/hardcontrol/inventory_print.html
@@ -15,34 +15,68 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 
     <!-- Custom styles for this template -->
-
+    <style>
+        .table-bordered td, .table-bordered th {
+            border: 1px solid #000000;
+        }
+        @media print{
+            .table-bordered thead tr td,.table-bordered tbody tr td,.table-bordered tbody tr th{
+                border-width: 1px !important;
+                border-style: solid !important;
+                border-color: black !important;
+                background-color: #FFF;
+                -webkit-print-color-adjust:exact ;
+            }
+    }
+    </style>
   </head>
 
   <body class="bg-light">
-  <main role="main" class="container">
+  <main role="main" class="container-fluid">
 
     {% if csv_list|length > 0 %}
 
         <div class="mt-3 p-3 bg-white">
+            <button type="button" class="btn btn-info d-print-none" onclick="window.close()">Закрыть</button>
+            <button type="button" class="btn btn-secondary print_button d-print-none" onclick="window.print()">Печать</button>
 
-            <h6 class="pb-2 mb-0"><b>Оборудование</b></h6>
+            <h4 class="text-center"><b>Акт приема/сдачи дежурств на складе</b></h4>
+            <p class="text-center">{% now "d.m.Y H:i" %}</p>
 
-            <table class="table">
+            <table class="table table-bordered table-sm">
                 <tr>
-                    <th><b>Наименование</b></th>
-                    <th>Наименование СВТ</th>
-                    <th>Описание оборудования</th>
+                    <th scope="col">&nbsp;</th>
+                    <th scope="col"><b>Наименование ИТС</b></th>
+                    <th scope="col">Количество по описи</th>
+                    <th scope="col">На складе</th>
+                    <th scope="col">В пользовании</th>
+                    <th scope="col">В ремонте</th>
                 </tr>
-
 
                  {% for csv in csv_list %}
                     <tr>
-                        <td>{{ csv.title }}</td>
+                        <th scope="row" class="text-center">{{ forloop.counter }}</th>
                         <td>{{ csv.name }}</td>
-                        <td>{{ csv.meta_description }}</td>
+                        <td>{{ csv.the_count }}</td>
+                        <td>{{ csv.sklad_count }}</td>
+                        <td>{{ csv.used_count }}</td>
+                        <td>{{ csv.repair_count }}</td>
                     </tr>
                 {% endfor %}
             </table>
+            <p>&nbsp;</p>
+
+            <table class="table table-borderless table-sm col-7">
+                <tr>
+                    <td>Сдал (подпись дежурного)</td>
+                    <td>____________________________________</td>
+                </tr>
+                <tr>
+                    <td>Принял (подпись дежурного)</td>
+                    <td>____________________________________</td>
+                </tr>
+            </table>
+            <button type="button" class="btn btn-secondary print_button d-print-none" onclick="window.print()">Печать</button>
         </div>
     {% endif %}
   </main>
